<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScheduleMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="view_edit">View / Edit</string>
    <string name="create">Create</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="translate">Translate</string>
    <string name="title_activity_add_appointment">Add Appointment</string>
    <string name="title_activity_view_edit_appoinment">View Edit Appointment</string>
    <string name="title_activity_delete_appoinment">Delete Appointment</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_translate">Translate</string>
    <string name="hint_title">Title</string>
    <string name="hint_time">Time of Appointment</string>
    <string name="hint_detail">Details of Appointment</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <!--
    string name="hint_">Translate</string>
    <string name="hint_">Translate</string>
    <string name="hint_">Translate</string>
    <string name="hint_">Translate</string>
    <string name="hint_">Translate</string
    -->

    <string name="title_activity_move">Move the Appointment</string>
    <string name="title_activity_viewing">Select the Appointment</string>
    <string name="update">Update</string>

</resources>
