<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:gravity="center_vertical|center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:minHeight="150dp"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/layoutButtonHome">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:showDividers="none">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:dividerPadding="5dp">

                <Button
                    android:id="@+id/btnCreateAppointment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create" />

                <Button
                    android:id="@+id/btnViewEdit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_edit" />

                <Button
                    android:id="@+id/btnMove"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/move" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"

                android:layout_gravity="center">



                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />
                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search" />

                <Button
                    android:id="@+id/btnTranslate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/translate" />
            </TableRow>


        </TableLayout>

    </LinearLayout>

</LinearLayout>